Add `GET /internal/email_confirmations/:email_confirmation_id`
