# app/models/internal/error_code.rb
@@ -4,5 +4,6 @@
 class Internal::ErrorCode < T::Enum
   enums do
     InvalidInputData = new("invalid_input_data")
+    NotFound = new("not_found")
   end
 end
