# app/models/resources/internal/email_confirmation.rb
@@ -4,5 +4,5 @@
 class Resources::Internal::EmailConfirmation < Resources::Internal::Base
   root_key :email_confirmation, :email_confirmations
 
-  attributes :id
+  attributes :id, :succeeded_at
 end
